--- a/scss/pages/_news.scss
+++ b/scss/pages/_news.scss
@@ -17,9 +17,10 @@
 }
 
 .news-img {
-	width: 50%;
+	width: 40%;
 	float: left;
 	margin-bottom: 10px;
+	position: relative;
 
 	@include breakpoint(tablet2) {
 		width: 100%;
@@ -33,9 +34,9 @@
 }
 
 .news-content {
-	width: 50%;
+	width: 60%;
 	float: left;
-	padding-left: 20px;
+	padding-right: 20px;
 
 	@include breakpoint(tablet2) {
 		width: 100%;
@@ -59,11 +60,11 @@
 	p {
 		font-size: 14px;
 		padding-bottom: 10px;
+		line-height: 22px;
 	}
 }
 
 .news-item {
-
 	&:after {
 		content:'';
 		display: block;
@@ -73,7 +74,13 @@
 }
 
 .news-tools {
-	margin-top: 10px;
+		margin: 0;
+		padding: 5px 0;
+		position: absolute;
+		z-index: 1;
+		top: 0;
+		left: 0;
+		background-color: $coWhite;
 
 	ul {
 		text-align: center;
@@ -109,7 +116,37 @@
 	display: inline-block;
 	padding: 3px 5px;
 	border: 1px solid $coLightBlue;
-	margin-bottom: 10px;
+	margin-bottom: 25px;
+}
+
+.quotes {
+	padding: 30px 0;
+	h4 {
+		width: 80%;
+		margin: auto;
+	}
+
+	p {
+		width: 100%;
+    font-style: italic;
+    opacity: 0.8;
+    margin-top: 5px;
+    font-size: 16px;
+    display: inline-block;
+	}
+
+	span {
+		position: relative;
+		font-size: 100px;
+		float: left;
+		top: -26px;
+		height: 40px;
+		opacity: 0.5;
+
+		&:last-child {
+			float: right;
+		}
+	}
 }
 
 .new-listings {
@@ -118,6 +155,12 @@
 		padding-top: 35px;
 		border-bottom: 1px solid $coLightBlue;
 	}
+}
+
+.news-btn {
+	padding: 3px 10px;
+	font-size: 12px;
+	margin-top: 20px;
 }
 
 .promo-listings {
@@ -134,13 +177,8 @@
 	margin-bottom: 20px;
 
 	.news-tools {
-		margin: 0;
-		padding: 5px 0;
-		position: absolute;
-		z-index: 1;
-		top: 0;
 		right: 0;
-		background-color: $coWhite;
+		left: auto;
 	}
 }
 
@@ -151,12 +189,6 @@
 	h2 {
 		font-size: 22px;
 		line-height: 26px;
-	}
-
-	.btn {
-		padding: 3px 10px;
-		font-size: 12px;
-		margin-top: 20px;
 	}
 }
 
