--- a/css/style.css
+++ b/css/style.css
@@ -12327,82 +12327,87 @@ a img.aligncenter {
   font-size: 20px;
 }
 
-/* line 248, ../scss/pages/_news.scss */
+/* line 247, ../scss/pages/_news.scss */
+.news-single {
+  margin-top: 35px;
+}
+
+/* line 251, ../scss/pages/_news.scss */
 .news-single-content {
   margin-bottom: 50px;
 }
-/* line 251, ../scss/pages/_news.scss */
+/* line 254, ../scss/pages/_news.scss */
 .news-single-content p {
   padding-bottom: 15px;
 }
-/* line 255, ../scss/pages/_news.scss */
+/* line 258, ../scss/pages/_news.scss */
 .news-single-content h2, .news-single-content h3, .news-single-content h4, .news-single-content h5, .news-single-content h6 {
   margin: 20px 0 10px;
   font-family: "Roboto", "Helvetica", "Arial", "sans-serif";
   font-weight: 700;
   line-height: 1.2;
 }
-/* line 262, ../scss/pages/_news.scss */
+/* line 265, ../scss/pages/_news.scss */
 .news-single-content h2 {
   font-size: 28px;
 }
 @media (max-width: 767px) {
-  /* line 262, ../scss/pages/_news.scss */
+  /* line 265, ../scss/pages/_news.scss */
   .news-single-content h2 {
     font-size: 24px;
   }
 }
-/* line 270, ../scss/pages/_news.scss */
+/* line 273, ../scss/pages/_news.scss */
 .news-single-content h3 {
   font-size: 24px;
 }
 @media (max-width: 767px) {
-  /* line 270, ../scss/pages/_news.scss */
+  /* line 273, ../scss/pages/_news.scss */
   .news-single-content h3 {
     font-size: 20px;
   }
 }
-/* line 278, ../scss/pages/_news.scss */
+/* line 281, ../scss/pages/_news.scss */
 .news-single-content h4 {
   font-size: 20px;
 }
 @media (max-width: 767px) {
-  /* line 278, ../scss/pages/_news.scss */
+  /* line 281, ../scss/pages/_news.scss */
   .news-single-content h4 {
     font-size: 18px;
   }
 }
-/* line 286, ../scss/pages/_news.scss */
+/* line 289, ../scss/pages/_news.scss */
 .news-single-content h5 {
   font-size: 18px;
 }
 @media (max-width: 767px) {
-  /* line 286, ../scss/pages/_news.scss */
+  /* line 289, ../scss/pages/_news.scss */
   .news-single-content h5 {
     font-size: 16px;
   }
 }
-/* line 294, ../scss/pages/_news.scss */
+/* line 297, ../scss/pages/_news.scss */
 .news-single-content h6 {
   font-size: 16px;
 }
 @media (max-width: 767px) {
-  /* line 294, ../scss/pages/_news.scss */
+  /* line 297, ../scss/pages/_news.scss */
   .news-single-content h6 {
     font-size: 14px;
   }
 }
-/* line 302, ../scss/pages/_news.scss */
+/* line 305, ../scss/pages/_news.scss */
 .news-single-content a {
   font-weight: 300;
   color: #f89f1b;
   word-break: break-all;
 }
-/* line 307, ../scss/pages/_news.scss */
+/* line 310, ../scss/pages/_news.scss */
 .news-single-content a:hover {
   text-decoration: none;
 }
-/* line 312, ../scss/pages/_news.scss */
+/* line 315, ../scss/pages/_news.scss */
 .news-single-content img.alignright {
   float: right;
   margin: 0 0 1em 1em;
@@ -12410,7 +12415,7 @@ a img.aligncenter {
   height: auto;
 }
 @media (max-width: 767px) {
-  /* line 312, ../scss/pages/_news.scss */
+  /* line 315, ../scss/pages/_news.scss */
   .news-single-content img.alignright {
     display: block;
     float: none;
@@ -12418,7 +12423,7 @@ a img.aligncenter {
     margin-left: 0;
   }
 }
-/* line 325, ../scss/pages/_news.scss */
+/* line 328, ../scss/pages/_news.scss */
 .news-single-content img.alignleft {
   float: left;
   margin: 0 1em 1em 0;
@@ -12426,7 +12431,7 @@ a img.aligncenter {
   height: auto;
 }
 @media (max-width: 767px) {
-  /* line 325, ../scss/pages/_news.scss */
+  /* line 328, ../scss/pages/_news.scss */
   .news-single-content img.alignleft {
     display: block;
     float: none;
@@ -12434,7 +12439,7 @@ a img.aligncenter {
     margin-right: 0;
   }
 }
-/* line 335, ../scss/pages/_news.scss */
+/* line 338, ../scss/pages/_news.scss */
 .news-single-content img.aligncenter {
   display: block;
   margin-left: auto;
@@ -12444,21 +12449,21 @@ a img.aligncenter {
   max-width: 100%;
   height: auto;
 }
-/* line 336, ../scss/pages/_news.scss */
+/* line 339, ../scss/pages/_news.scss */
 .news-single-content a img.alignright {
   float: right;
   margin: 0 0 1em 1em;
   max-width: 100%;
   height: auto;
 }
-/* line 337, ../scss/pages/_news.scss */
+/* line 340, ../scss/pages/_news.scss */
 .news-single-content a img.alignleft {
   float: left;
   margin: 0 1em 1em 0;
   max-width: 100%;
   height: auto;
 }
-/* line 338, ../scss/pages/_news.scss */
+/* line 341, ../scss/pages/_news.scss */
 .news-single-content a img.aligncenter {
   display: block;
   margin-left: auto;
@@ -12468,90 +12473,125 @@ a img.aligncenter {
   max-width: 100%;
   height: auto;
 }
-/* line 340, ../scss/pages/_news.scss */
+/* line 343, ../scss/pages/_news.scss */
 .news-single-content h1 {
   font-size: 53px;
   line-height: 53px;
   color: #fff200;
 }
 @media (max-width: 767px) {
-  /* line 340, ../scss/pages/_news.scss */
+  /* line 343, ../scss/pages/_news.scss */
   .news-single-content h1 {
     font-size: 43px;
     line-height: 43px;
   }
 }
 @media (max-width: 640px) {
-  /* line 340, ../scss/pages/_news.scss */
+  /* line 343, ../scss/pages/_news.scss */
   .news-single-content h1 {
     font-size: 33px;
     line-height: 33px;
   }
 }
-/* line 356, ../scss/pages/_news.scss */
+/* line 359, ../scss/pages/_news.scss */
 .news-single-content ul {
   padding-left: 25px;
   list-style-type: disc;
   padding-top: 15px;
   padding-bottom: 15px;
 }
-/* line 362, ../scss/pages/_news.scss */
+/* line 365, ../scss/pages/_news.scss */
 .news-single-content ul.bullets {
   padding-left: 0;
 }
-/* line 365, ../scss/pages/_news.scss */
+/* line 368, ../scss/pages/_news.scss */
 .news-single-content ul.bullets li {
   list-style-type: none;
 }
-/* line 371, ../scss/pages/_news.scss */
+/* line 374, ../scss/pages/_news.scss */
 .news-single-content ul li {
   padding-bottom: 5px;
 }
-/* line 376, ../scss/pages/_news.scss */
+/* line 379, ../scss/pages/_news.scss */
 .news-single-content ol {
   padding-top: 15px;
   padding-bottom: 15px;
   padding-left: 25px;
   list-style-type: decimal;
 }
-/* line 381, ../scss/pages/_news.scss */
+/* line 384, ../scss/pages/_news.scss */
 .news-single-content ol li {
   padding-bottom: 5px;
 }
-/* line 386, ../scss/pages/_news.scss */
+/* line 389, ../scss/pages/_news.scss */
 .news-single-content img {
   max-width: 100%;
   height: auto;
 }
 
-/* line 392, ../scss/pages/_news.scss */
+/* line 395, ../scss/pages/_news.scss */
 .related-content {
   border-top: 1px solid #82d9ff;
   padding-top: 30px;
 }
-/* line 396, ../scss/pages/_news.scss */
+/* line 399, ../scss/pages/_news.scss */
 .related-content .h-news-item h5 {
   font-weight: 700;
   text-transform: uppercase;
 }
 @media (max-width: 767px) {
-  /* line 402, ../scss/pages/_news.scss */
+  /* line 405, ../scss/pages/_news.scss */
   .related-content p {
     font-size: 18px;
   }
 }
 
-/* line 411, ../scss/pages/_news.scss */
+/* line 414, ../scss/pages/_news.scss */
+.side-list {
+  margin-top: 1em;
+}
+/* line 416, ../scss/pages/_news.scss */
+.side-list h5 {
+  font-size: 16px;
+  font-weight: 500;
+  margin-bottom: 10px;
+  color: #00adef;
+}
+/* line 423, ../scss/pages/_news.scss */
+.side-list p {
+  font-size: 14px;
+  padding: 5px 0;
+  border-bottom: 1px solid #00adef;
+  margin-bottom: 5px;
+}
+/* line 429, ../scss/pages/_news.scss */
+.side-list p a {
+  color: #00adef;
+}
+/* line 431, ../scss/pages/_news.scss */
+.side-list p:last-child {
+  border: 0;
+}
+/* line 436, ../scss/pages/_news.scss */
+.side-list .box {
+  margin-bottom: 50px;
+}
+/* line 438, ../scss/pages/_news.scss */
+.side-list .box img {
+  width: 100%;
+}
+
+/* line 444, ../scss/pages/_news.scss */
 .tags-label {
   display: inline-block;
   margin-right: 8px;
 }
 
-/* line 416, ../scss/pages/_news.scss */
+/* line 449, ../scss/pages/_news.scss */
 .tags-list {
   margin: 25px 0;
 }
-/* line 419, ../scss/pages/_news.scss */
+/* line 452, ../scss/pages/_news.scss */
 .tags-list a {
   border: 1px solid #82d9ff;
   padding: 5px 10px;
@@ -12561,14 +12601,14 @@ a img.aligncenter {
   margin-bottom: 5px;
   margin-right: 4px;
 }
-/* line 428, ../scss/pages/_news.scss */
+/* line 461, ../scss/pages/_news.scss */
 .tags-list a:hover {
   background: #00adef;
   border: 1px solid #00adef;
   color: #ffffff;
 }
 
-/* line 436, ../scss/pages/_news.scss */
+/* line 469, ../scss/pages/_news.scss */
 .publish-date {
   border: 1px solid #82d9ff;
   padding: 5px 10px;
@@ -12578,11 +12618,11 @@ a img.aligncenter {
   margin-bottom: 5px;
 }
 
-/* line 445, ../scss/pages/_news.scss */
+/* line 478, ../scss/pages/_news.scss */
 .featured-img-wrap {
   position: relative;
 }
-/* line 448, ../scss/pages/_news.scss */
+/* line 481, ../scss/pages/_news.scss */
 .featured-img-wrap span.categ-wrap {
   position: absolute;
   left: 0;
