--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -56,7 +56,7 @@ em {
 	height:100%;
 	height: auto !important;
 	min-height:100%;
-	padding-top: 103px;
+	padding-top: 125px;
 	position: relative;
 	overflow: hidden;
 
@@ -155,6 +155,25 @@ header {
 		background-image: url('../images/mobile-os-w.png');
 		background-color: $coGreen;
 		color: #fff;
+	}
+}
+
+.and {
+	background-image: url('../images/s-m-an.png');
+	background-size: 16px;
+	padding: 6px 34px 7px 12px;
+	&:hover {
+		background-image: url('../images/s-m-an-w.png');
+	}
+}
+
+.ios {
+	background-image: url('../images/s-m-os.png');
+	background-size: 16px;
+	padding: 6px 34px 7px 12px;
+	background-position: right 10px top 3px;
+	&:hover {
+		background-image: url('../images/s-m-os-w.png');
 	}
 }
 
