--- a/scss/pages/_inner.scss
+++ b/scss/pages/_inner.scss
@@ -165,6 +165,12 @@
 }
 .filter-bg {
 
+	@include breakpoint(tablet2) {
+		.row {
+			margin: 0;
+		}
+	}
+
 	.categ-title {
 		background: #00adef;
 			color: #fff;
@@ -182,6 +188,7 @@
 				font-size: 16px;
 				padding: 5px 10px;
 			}
+
 	}
 
 	&.card-list {
@@ -191,6 +198,11 @@
 			.card-item {
 				min-width: 198px;
 				max-width: 198px;
+
+				@include breakpoint(tablet2) {
+					min-width: 188px;
+					max-width: 188px;
+				}
 			}
 		}
 
