--- a/scss/abovefold/_home.scss
+++ b/scss/abovefold/_home.scss
@@ -15,7 +15,35 @@
     &.is-animated {
     	opacity: 1;
     }
+
+
+    .video-holder {
+		position: absolute;
+		width: 100%;
+		height: 100%;
+		top: 0;
+		left: 0;
+		z-index: 1;
+
+		@include breakpoint(tablet2) {
+			display: none;
+		}
+
+		&:after {
+			content:'';
+			display: block;
+			float: none;
+			clear: both;
+			width: 100%;
+			height: 100%;
+			position: absolute;
+			top: 0;
+			left: 0;
+			background: rgba(0, 0, 0, 0.1);
+		}
+    }
 }
+
 
 .table-wrap {
 	position: absolute;
@@ -169,7 +197,7 @@
 .home-flexslider {
 	/*height: calc(100vh - 103px);
 	min-height: 540px;*/
-	position: relative;
+	position: static;
 	/*max-height: 768px;*/
 	zoom: 1;
 	background: #cada2a;
@@ -238,7 +266,7 @@
 
 		&.flex-control-paging {
 			position: absolute;
-			bottom: 70px;
+			bottom: 20px;
 			text-align: center;
 			width: 100%;
 			z-index: 99;
