--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -5,7 +5,7 @@
 	padding-top: 0;
 	opacity: 0;
 	position: relative;
-	top: -50px;
+	top: 0px;
 	background: transparent;
 
 	@include breakpoint(tablet2) {
@@ -69,6 +69,39 @@
 		display: inline-block;
 	}
 }
+
+
+.play-btn {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	border: 1px solid #F9A021;
+	width: 65px;
+	height: 65px;
+	background: #fff;
+	border-radius: 50%;
+	box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
+	margin-top: 0;
+	@include transform(translate(-50%, -50%));
+	z-index: 10;
+
+	&:before {
+		content:'';
+		display: block;
+		float: none;
+		width: 0;
+		height: 0;
+		border-top: 12px solid transparent;
+		border-left: 17px solid #F9A021;
+		border-bottom: 12px solid transparent;
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		margin-top: -10px;
+		margin-left: -5px;
+	}
+}
+
 
 /*.home-feature {
 	padding-bottom: 100px;
@@ -247,4 +280,54 @@
 			}
 		}
 	}
+}
+
+
+.popup-wrap {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.7);
+    z-index: 1011;
+    left: 0;
+    opacity: 0;
+    visibility: hidden;
+    transition: all 0.4s ease;
+
+    .close-video {
+    	position: absolute;
+    	top: 0;
+    	right: 0;
+    	z-index: 1001;
+    }
+}
+
+.popup-wrap.active {
+    opacity: 1;
+    visibility: visible;
+}
+
+.popup-content {
+    position: relative;
+    width: 90%;
+    height: 0;
+    top: 50%;
+    margin: 0 auto;
+    transform: translate(0, -50%);
+    padding-bottom: 46%;
+    background: #000;
+}
+
+.video-youtube {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    top: 0;
+    left: 0;
+
+    iframe {
+    	width: 100%;
+    	height: 100%;
+    }
 }
