--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -3,6 +3,7 @@ footer {
 	z-index: 2;
 	position: relative;
 	background: $coDarkGreen;
+	padding-bottom: 50px;
 
 	.container {
 		position: relative;
