--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -499,6 +499,7 @@ header {
 				text-align: center;
 				background: $coGreen;
 				color: $coWhite;
+				padding: 0;
 
 				.fa {
 					font-size: 13px;
@@ -750,7 +751,7 @@ header {
 	right: -100%;
 	height: 100%;
 	width: 100%;
-	z-index: 1002;
+	z-index: 2003;
 	@include transition(all 0.4s cubic-bezier(0.645, 0.045, 0.355, 1));
 
 	@include breakpoint(tablet) {
@@ -863,7 +864,7 @@ header {
 
 .hv-wrap {
 
-	ul {
+	#menu-main-menuen {
 
 
 		> li {
