--- a/scss/pages/_inner.scss
+++ b/scss/pages/_inner.scss
@@ -208,3 +208,22 @@
 
 	}
 }
+
+.filter-hd {
+	border-bottom: 1px solid $coBlue;
+	display: flex;
+	margin-top: 20px;
+
+	.title, .discount, .contact {
+		padding: 10px  0;
+		text-transform: uppercase;
+		font-size: 14px;
+		font-weight: bold;
+	}
+	.title {
+		width: 64%;
+	}
+	.discount, .contact {
+		width: 18%;
+	}
+}
