--- a/scss/abovefold/_inner.scss
+++ b/scss/abovefold/_inner.scss
@@ -91,6 +91,14 @@
 		}
 	}
 
+	.promo {
+		font-size: 18px;
+		float: left;
+		padding-top: 6px;
+		background: $coDarkGreen;
+		padding: 10px 20px;
+	}
+
 	&.text-left {
 		width: 50%;
 		float: left;
