--- a/css/style.css
+++ b/css/style.css
@@ -12270,54 +12270,127 @@ a img.aligncenter {
 }
 
 @media (max-width: 767px) {
-  /* line 169, ../scss/pages/_inner.scss */
+  /* line 167, ../scss/pages/_inner.scss */
+  .wcx {
+    padding: 10px;
+  }
+}
+
+@media (max-width: 767px) {
+  /* line 176, ../scss/pages/_inner.scss */
   .filter-bg .row {
     margin: 0;
   }
 }
-/* line 174, ../scss/pages/_inner.scss */
+/* line 181, ../scss/pages/_inner.scss */
+.filter-bg .wd-20 {
+  width: 20%;
+}
+@media (max-width: 767px) {
+  /* line 181, ../scss/pages/_inner.scss */
+  .filter-bg .wd-20 {
+    width: 100%;
+  }
+}
+/* line 186, ../scss/pages/_inner.scss */
+.filter-bg .wd-15 {
+  width: 15%;
+}
+@media (max-width: 767px) {
+  /* line 186, ../scss/pages/_inner.scss */
+  .filter-bg .wd-15 {
+    width: 100%;
+  }
+}
+/* line 191, ../scss/pages/_inner.scss */
+.filter-bg .wd-10 {
+  width: 10%;
+}
+@media (max-width: 767px) {
+  /* line 191, ../scss/pages/_inner.scss */
+  .filter-bg .wd-10 {
+    width: 100%;
+  }
+}
+/* line 199, ../scss/pages/_inner.scss */
+.filter-bg ul.wd-ul {
+  padding-top: 0;
+  margin-bottom: 20px;
+}
+/* line 202, ../scss/pages/_inner.scss */
+.filter-bg ul.wd-ul li {
+  padding: 10px 0;
+  margin: 0;
+  border: 0;
+  background-color: #eef3bf;
+  min-height: auto;
+}
+/* line 208, ../scss/pages/_inner.scss */
+.filter-bg ul.wd-ul li:nth-child(2n) {
+  background-color: #fff;
+}
+/* line 212, ../scss/pages/_inner.scss */
+.filter-bg ul.wd-ul li:hover {
+  background-color: #fde4be;
+}
+/* line 218, ../scss/pages/_inner.scss */
+.filter-bg ul.wd-ul li .wd-20, .filter-bg ul.wd-ul li .wd-15, .filter-bg ul.wd-ul li .wd-10 {
+  float: left;
+}
+/* line 220, ../scss/pages/_inner.scss */
+.filter-bg ul.wd-ul li p {
+  padding: 0 10px;
+  font-size: 13px;
+}
+/* line 227, ../scss/pages/_inner.scss */
 .filter-bg .categ-title {
   padding: 6px 10px;
   font-size: 20px;
   text-align: center;
 }
 @media (max-width: 992px) {
-  /* line 174, ../scss/pages/_inner.scss */
+  /* line 227, ../scss/pages/_inner.scss */
   .filter-bg .categ-title {
     font-size: 18px;
   }
 }
 @media (max-width: 480px) {
-  /* line 174, ../scss/pages/_inner.scss */
+  /* line 227, ../scss/pages/_inner.scss */
   .filter-bg .categ-title {
     font-size: 16px;
     padding: 5px 10px;
   }
 }
-/* line 191, ../scss/pages/_inner.scss */
+/* line 244, ../scss/pages/_inner.scss */
 .filter-bg.card-list .flex {
   justify-content: flex-start;
 }
-/* line 194, ../scss/pages/_inner.scss */
+/* line 247, ../scss/pages/_inner.scss */
 .filter-bg.card-list .flex .card-item {
   min-width: 185px;
   max-width: 185px;
 }
 @media (max-width: 767px) {
-  /* line 194, ../scss/pages/_inner.scss */
+  /* line 247, ../scss/pages/_inner.scss */
   .filter-bg.card-list .flex .card-item {
     min-width: 188px;
     max-width: 188px;
   }
 }
 
-/* line 208, ../scss/pages/_inner.scss */
+/* line 261, ../scss/pages/_inner.scss */
 .filter-hd {
   display: flex;
   margin: 10px 0 20px;
 }
-/* line 212, ../scss/pages/_inner.scss */
-.filter-hd .title, .filter-hd .discount, .filter-hd .contact {
+@media (max-width: 767px) {
+  /* line 261, ../scss/pages/_inner.scss */
+  .filter-hd {
+    display: none;
+  }
+}
+/* line 269, ../scss/pages/_inner.scss */
+.filter-hd .title, .filter-hd .discount, .filter-hd .contact, .filter-hd .wd-20, .filter-hd .wd-15, .filter-hd .wd-10 {
   background-color: #00adef;
   color: #ffffff;
   padding: 10px;
@@ -12326,28 +12399,40 @@ a img.aligncenter {
   font-weight: bold;
   margin: 0 1px 0 0;
 }
-/* line 221, ../scss/pages/_inner.scss */
+/* line 278, ../scss/pages/_inner.scss */
 .filter-hd .title {
   width: 64%;
 }
-/* line 224, ../scss/pages/_inner.scss */
+/* line 281, ../scss/pages/_inner.scss */
 .filter-hd .discount, .filter-hd .contact {
   width: 18%;
 }
 
-/* line 229, ../scss/pages/_inner.scss */
+/* line 287, ../scss/pages/_inner.scss */
 .filter-gp {
   border: 1px solid #82d9ff;
   padding: 10px;
   margin: 20px 0;
 }
-/* line 234, ../scss/pages/_inner.scss */
+/* line 292, ../scss/pages/_inner.scss */
 .filter-gp ul {
   padding: 0;
 }
-/* line 237, ../scss/pages/_inner.scss */
+/* line 295, ../scss/pages/_inner.scss */
 .filter-gp ul li:last-child {
   border: 0;
+}
+/* line 301, ../scss/pages/_inner.scss */
+.filter-gp .filter-discount,
+.filter-gp .filter-contact {
+  text-align: center;
+}
+@media (max-width: 767px) {
+  /* line 301, ../scss/pages/_inner.scss */
+  .filter-gp .filter-discount,
+  .filter-gp .filter-contact {
+    text-align: left;
+  }
 }
 
 /* line 1, ../scss/pages/_news.scss */
