--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -561,6 +561,7 @@ ul.icons {
 		img {
 			float: left;
 			width: 32px;
+			height: auto;
 			margin-right: 10px;
 			margin-left: -42px;
 			margin-top: -5px;
@@ -1670,7 +1671,7 @@ a img.aligncenter {display: block; margin-left: auto; margin-right: auto; margin
 }
 
 .fb-page-like {
-	
+
 	.fb-frame {
 		position:fixed;
 		width:255px;
